add liveness, status, and a list endpoint to populate with provisioned resources
